freesia/k8s/apps/prom-stack-v3/thanos-bucket/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thanos-bucket
  labels:
    app.kubernetes.io/name: thanos
    app.kubernetes.io/instance: thanos
    app.kubernetes.io/component: bucket

spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: thanos
      app.kubernetes.io/instance: thanos
      app.kubernetes.io/component: bucket

  template:
    metadata:
      labels:
        app.kubernetes.io/name: thanos
        app.kubernetes.io/instance: thanos
        app.kubernetes.io/component: bucket

    spec:
      containers:
        - name: thanos-bucket
          image: "quay.io/thanos/thanos:v0.17.1"
          imagePullPolicy: IfNotPresent
          args:
            - "tools"
            - "bucket"
            - "web"
            - "--log.level=info"
            - "--log.format=logfmt"
            - "--http-address=0.0.0.0:8080"
            - "--objstore.config-file=/etc/config/object-store.yaml"
            - "--refresh=30m"
            - "--timeout=5m"
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: config-volume
              mountPath: /etc/config
              readOnly: true
          resources: {}
      volumes:
        - name: config-volume
          secret:
            secretName: "thanos-bucket-config"
